--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,6 +350,15 @@ footer {
   font-size: 2rem;
   font-weight: 300;
 }
+@media screen and (max-width: 480px) {
+  footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+}
 footer .follow-invitation {
   padding-bottom: 12px;
   margin-bottom: 12px;
@@ -364,6 +373,11 @@ footer .follow-invitation::after {
   position: absolute;
   bottom: 0;
   left: 0;
+}
+@media screen and (max-width: 480px) {
+  footer .social {
+    align-self: flex-start;
+  }
 }
 footer .social .social-links {
   display: flex;
@@ -677,6 +691,7 @@ section.projects .tabs-container .tab.active::after {
 section.projects .gallery {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 12px;
   padding: 20px 10%;
 }
