--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -360,6 +360,7 @@ section.projects{
     .gallery{
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
         gap:12px;
         padding:20px 10%;
      
