--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,7 +354,6 @@ section.container .left-side, section.container .right-side {
 @media screen and (max-width: 480px) {
   section.container .left-side, section.container .right-side {
     width: 100%;
-    height: fit-content;
   }
 }
 section.container .left-side .main-title::after, section.container .right-side .main-title::after {
@@ -479,16 +478,13 @@ div.banner {
   opacity: 0.05;
 }
 
-section.contacts .left-side, section.contacts .right-side {
-  min-height: 565px;
+section.contacts {
+  background-color: #d8d8d8;
 }
 @media screen and (max-width: 480px) {
   section.contacts .left-side, section.contacts .right-side {
     min-height: unset;
   }
-}
-section.contacts .left-side {
-  background-color: #d8d8d8;
 }
 section.contacts .left-side p span {
   display: block;
@@ -756,13 +752,17 @@ section.projects .gallery {
   padding: 20px 10%;
 }
 section.projects .gallery li {
-  width: 250px;
+  flex-grow: 1;
   height: 250px;
   background-color: rgb(255, 255, 255);
-  border: 1px solid #4ab7e0;
 }
 section.projects .gallery img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transform: scale(0.95);
+  transition: transform 0.2s;
+}
+section.projects .gallery img:hover {
+  transform: scale(1);
 }
