--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -75,28 +75,29 @@ div.banner{
 // --------------------------------
 
 section.contacts{
+    background-color: #d8d8d8;
+
     .left-side, .right-side{
-        min-height:565px;   // Don't know why height:100% is not taking effect
+        // min-height:565px;   // Don't know why height:100% is not taking effect
         
         @include breakpoint(mobile){
             min-height: unset;
         }
     }
 
-    .left-side{
-        background-color: #d8d8d8;
+    .left-side p{
         
-        p span{
+        span{
             display: block;
             line-height:1.5;
         }
 
-        p span:first-child{
+        span:first-child{
             font-size: fontSize(level_4);
             font-weight: 600;
         }
 
-        p span:not(:first-child){
+        span:not(:first-child){
             font-size: fontSize(leve_3);
             font-weight: 300;
         }
@@ -126,7 +127,6 @@ section.contacts{
                 display: block;
             }
         }
-
 
         .contacts-list-icons-container{
             height:100%;
@@ -204,7 +204,6 @@ section.services{
     border-top: 12px solid;
     border-bottom: 12px solid;
     border-color:$secondary_color;
-
 
     .main-title, p{
         color:#fff;
@@ -390,17 +389,23 @@ section.projects{
         padding:20px 10%;
      
         li{
-            // flex-grow: 1;
-            width:250px;
+            flex-grow: 1;
             height:250px;
             background-color: rgba(255, 255, 255, 1);
-            border:1px solid $secondary_color;
+            // border:1px solid $secondary_color;
         }
 
         img{
             width:100%;
             height:100%;
             object-fit: cover;
+
+            transform: scale(0.95);
+            transition: transform .2s;
+    
+            &:hover{
+                transform: scale(1);
+            }
         }
     }
 }
