--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -123,13 +123,14 @@
     }
     
     .phone-number{
+        display: flex;
+        align-items: center;
+        gap:12px;
         color:#fff;
         background-color: rgba(255, 255, 255, 0.2);
         border-radius:12px;
         padding:4px 12px;
         font-size: 1.4rem;
-        display: flex;
-        gap:12px;
         transition: background-color .2s;
 
         @media screen and (max-width:1130px){
