--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -381,14 +381,13 @@ section.projects{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap:12px;
+        gap:16px;
         padding:20px 10%;
      
         li{
             flex-grow: 1;
             height:250px;
             background-color: rgba(255, 255, 255, 1);
-            // border:1px solid $secondary_color;
         }
 
         img{
@@ -396,11 +395,12 @@ section.projects{
             height:100%;
             object-fit: cover;
 
-            transform: scale(0.95);
-            transition: transform .2s;
-    
+            transform: scale(1);
+            transition: transform .3s;
+                        // object-fit .2s;
             &:hover{
-                transform: scale(1);
+                transform: scale(1.05);
+                // object-fit: scale-down;
             }
         }
     }
