--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -388,6 +388,7 @@ section.projects{
             flex-grow: 1;
             height:250px;
             background-color: rgba(255, 255, 255, 1);
+            transition: all 1s .3s;
         }
 
         img{
