--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -7,13 +7,54 @@
     width:max-content;
     padding:10px 20px;
     font-size:fontSize(level_5);
-    border: 2px solid #fff;
+    color:#fff;
+    position:relative;
+
+    // Buttons animation
+
+    &::after, &::before{
+        content:"";
+        width:0;
+        height:0;
+        background-color: transparent;
+        position:absolute;
+        transition: height .2s,
+                    width .2s .2s;
+        z-index:1;
+    }
+
+    &::before{
+        bottom:0;
+        left:0;
+        border-left: solid $secondary_color;
+        border-top: solid $secondary_color;
+    }
+
+    &::after{
+        top:0;
+        right:0;
+        border-right: solid $secondary_color;
+        border-bottom: solid $secondary_color;
+    }
+
+    &:hover::before, &:hover::after{
+        border-width:4px;
+        width:100%;
+        height: 100%;
+    }
+
+    // Buttons categories
 
     &-default{
         background-color: $primary_color;
-        color:#fff;
+    }
 
-        
+    &-bordered{
+        border:2px solid #fff;
+
+        &:hover{
+            border-color:transparent;
+        }
     }
 }   
 
