--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -8,8 +8,8 @@ $dark_color:#313131;
 
 $main_margin : 10%;
 
-$title_font : "Montserrat", "sans-serif";
-$default_font: "Source Sans Pro", "sans-serif";
+$title_font : "Montserrat", sans-serif;
+$default_font: "Source Sans Pro", sans-serif;
 
 // LISTS & MAPS
 
