--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,6 +331,11 @@ section .main-title {
   position: relative;
   max-width: max-content;
 }
+@media screen and (max-width: 480px) {
+  section .main-title {
+    font-size: 2.4rem;
+  }
+}
 section .main-title::after {
   content: "";
   width: 50%;
@@ -469,18 +474,20 @@ footer .social .social-links a {
 }
 
 div.banner {
-  padding: 60px 10% 0;
+  padding: 60px 0 0 10%;
   height: 80vh;
-  background-color: rgba(173, 216, 230, 0.5);
+  background-color: rgba(173, 216, 230, 0.3);
+  background-image: url(../../images/banner.JPG);
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background-position: -10em 0;
+  background-size: auto 80vh;
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
 @media screen and (max-width: 480px) {
   div.banner {
+    padding-left: 0;
     justify-content: flex-start;
   }
 }
@@ -488,9 +495,13 @@ div.banner {
 .banner-content {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: flex-start;
   gap: 20px;
-  width: 50%;
+  width: 60%;
+  height: 100%;
+  padding: 0 10%;
+  background-color: rgb(173, 216, 230);
 }
 @media screen and (max-width: 480px) {
   .banner-content {
@@ -526,7 +537,7 @@ div.banner {
 }
 
 section.contacts {
-  background-color: #d8d8d8;
+  background-color: #f0f0f0;
 }
 @media screen and (max-width: 480px) {
   section.contacts .left-side, section.contacts .right-side {
