--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -20,7 +20,7 @@
         position:absolute;
         transition: height .2s,
                     width .2s .2s;
-        z-index:1;
+        visibility:hidden;
     }
 
     &::before{
@@ -38,6 +38,7 @@
     }
 
     &:hover::before, &:hover::after{
+        visibility:visible;
         border-width:4px;
         width:100%;
         height: 100%;
