--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -67,6 +67,10 @@ div.banner{
             width:max-content;
             color:black;
             opacity:.2;
+
+            @include breakpoint(mobile){
+                color:#fff;
+            }
         }
     }
 }
