Hide graphic and ui tabs content by default

--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -469,6 +469,10 @@ section.projects{
             transition: all 1s .3s;
         }
 
+        li.web, li.ui{
+            display:none;
+        }
+
         img{
             width:100%;
             height:100%;
