--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -76,6 +76,72 @@ div.banner{
 }
 
 
+// ASIDE QUICK CONTACT
+//----------------------------
+
+.quick-contact{
+    border-radius: 25px;
+    position:fixed;
+    right:30px;
+    bottom:30px;
+    transition: background-color .2s;
+
+    &:hover{
+        background-color: lighten($primary_color, 10);
+    }
+
+    &::before, &::after{
+        display:none;    
+    }
+
+    @include breakpoint(mobile){
+        @include flex_center;
+        width:40px;
+        height:40px;
+
+        span{
+            display:none;
+        }
+    }
+}
+
+.popup{
+    background-color: #f1f1f1;
+    border-radius: 12px;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
+    padding:12px;
+    position:fixed;
+    right:30px;
+    bottom:80px;
+    transition: background-color .2s;
+    transform: scale(0);
+    visibility: hidden;
+    z-index:100;
+
+    &-show{
+        visibility: visible;
+        transform: scale(1);
+        transition: scale .2s;
+    }
+
+    a{
+        display: flex;
+        gap:12px;
+        padding:10px 16px;
+        min-width: 180px;
+        font-size: fontSize(normal);
+        transition: color .2s;
+
+        &:not(:last-child){
+            border-bottom:1px solid rgb(168, 168, 168);
+        }
+
+        &:hover{
+            color:$primary_color;
+        }
+    }
+}
+
 // SECTION - WHO AM I
 // -------------------------------
 
@@ -95,8 +161,6 @@ section.who-am-i{
         }
     }
 }
-
-
 
 // SECTION - CONTACTS
 // --------------------------------
@@ -486,6 +550,7 @@ section.projects{
         }
     }
 }
+
 
 
 // Animations
