--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -65,8 +65,8 @@ footer{
                 color:#ee2a7b;
             }
     
-            i.youtube{
-                color:#ff0000;
+            i.telegram{
+                color:#0076c0;
             }
     
             i.twitter{
