--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -5,12 +5,12 @@
 
 div.banner{
     padding: 56px 0 0 10%;
-    height:80vh;
+    height:100vh;
     background-color: rgba(173, 216, 230, 0.3);
     background-image: url(../../images/banner.JPG);
     background-repeat: no-repeat;
     background-position: -10em 0;
-    background-size: auto 80vh;
+    background-size: auto 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -256,6 +256,7 @@ section.contacts{
 section.utils{
     padding-left:0;
     padding-right:0;
+    padding-bottom:0;
 
     .description{
         padding:0 10%;
@@ -271,7 +272,9 @@ section.utils{
         gap:30px;
         background-color: #f0f0f0;
         padding:40px 10%;
+        padding-bottom: auto;
         width:100%;
+        height:100%;
 
         @include breakpoint(mobile){
             padding:20px 0;
